--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-:root{
---Violeta--:
-
+:root {
+    --Violata: #52357B;
+    --Azul-indigo: #5459AC;
+    --Azul-Empoeirado: #648DB3;
+    --verde-agua: #B2D8CE;
+    --preto: black;
+    --branco: white;
 }
