--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,8 @@ body {
 
 
 .lista-musicas {
-    display: grid;
-    grid-template-columns: repeat(2, 300px); 
+    display: flex;
+    /* grid-template-columns: repeat(2, 300px);  */
     gap: 20px;                               
     justify-content: center;                
     list-style: none;
