--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,6 @@ body {
     padding-top: 20px;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-
-
 }
 
 .title-select {
@@ -60,8 +58,9 @@ body {
 
 .musica img {
     width: 100%; 
-    height: 300px;
+    height: 200px;
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 10px;
+    border-radius: 20px;
 }
