--- a/styles.css
+++ b/styles.css
@@ -26,25 +26,48 @@ body {
 .title {
     font-size: 36px;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 4rem;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
+    display: flex;             
+    justify-content: center;   
+    align-items: center;       
 }
 
 .title-select {
-    margin-top: 8%;
+    margin-top: 4rem;
     text-align: center;
+    display: flex;            
+    justify-content: center;   
+    align-items: center;      
 }
 
+h2{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+
+h2:hover{
+    color: palevioletred;
+}
 
 .lista-musicas {
     display: flex;
     /* grid-template-columns: repeat(2, 300px);  */
-    gap: 20px;                               
+    gap: 60px;                               
     justify-content: center;                
     list-style: none;
     padding: 40px 0;
     margin: 0 auto;
+    
 }
 
 
@@ -54,6 +77,9 @@ body {
     align-items: center;
     text-align: center;
     color: var(--branco);
+    transition: box-shadow 0.5s ease, transform 0.5s ease;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow:hidden;
 }
 
 .musica img {
@@ -62,5 +88,30 @@ body {
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 10px;
-    border-radius: 20px;
+    transition:transform 1.2 ease;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+
+.musica:hover{
+color: palevioletred;
+transform: translateY(-16px);
+cursor:pointer;
+box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
+
+}
+
+.changeTitle{
+    color:darkcyan;
+}
+
+.opacityToMusics{
+opacity: 0.2;
+transition: all 0.4s ease-in-out;
+}
+
+.random-music{
+    display:flex;
+    justify-content: center;
+    padding-top:30px; 
 }
